--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   animate_do: ^3.3.4
   smooth_page_indicator: ^1.2.0
   shared_preferences: ^2.2.3
+  hive: ^2.0.0
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
