--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive: ^2.0.0
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.10+1
+  pinput: ^5.0.0
 
 dev_dependencies:
   flutter_test:
