--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.0
+  rxdart: ^0.28.0
+  flutter_bloc: ^8.1.6
+  google_fonts: ^6.2.1
+  auto_size_text: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
