--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
   assets:
     - assets/png/
     - assets/sauces/
+    - assets/frango_images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
