--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   flutter_bloc: ^8.1.6
   google_fonts: ^6.2.1
   auto_size_text: ^3.0.0
+  url_launcher: ^6.3.1
+  font_awesome_flutter: ^10.8.0
+  fluttertoast: ^8.2.8
 
 
 dev_dependencies:
