--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   google_fonts: ^6.2.1
   auto_size_text: ^3.0.0
+  dio: ^5.7.0
 
 
 dev_dependencies:
@@ -75,6 +76,7 @@ flutter:
     - assets/png/
     - assets/sauces/
     - assets/frango_images/
+    - assets/svg/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
