--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   url_launcher: ^6.3.1
   font_awesome_flutter: ^10.8.0
   fluttertoast: ^8.2.8
+  image_picker: ^1.1.2
 
 
 dev_dependencies:
