--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   animate_do: ^3.3.4
   smooth_page_indicator: ^1.2.0
   shared_preferences: ^2.2.3
-  hive: ^2.0.0
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.0
@@ -51,6 +50,8 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   fluttertoast: ^8.2.8
   image_picker: ^1.1.2
+  awesome_dio_interceptor: ^1.3.0
+  get_it: ^8.0.2
 
 
 dev_dependencies:
