-about_us_api_was_added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   fluttertoast: ^8.2.8
   image_picker: ^1.1.2
+  get_it: ^8.0.2
 
 
 dev_dependencies:
