--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,6 @@ dependencies:
   animate_do: ^3.3.4
   smooth_page_indicator: ^1.2.0
   shared_preferences: ^2.2.3
-  hive: ^2.0.0
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.0
@@ -46,6 +45,13 @@ dependencies:
   flutter_bloc: ^8.1.6
   google_fonts: ^6.2.1
   auto_size_text: ^3.0.0
+  dio: ^5.7.0
+  url_launcher: ^6.3.1
+  font_awesome_flutter: ^10.8.0
+  fluttertoast: ^8.2.8
+  image_picker: ^1.1.2
+  awesome_dio_interceptor: ^1.3.0
+  get_it: ^8.0.2
 
 
 dev_dependencies:
