--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   image_picker: ^1.1.2
   awesome_dio_interceptor: ^1.3.0
   get_it: ^8.0.2
+  provider: ^6.1.2
 
 
 dev_dependencies:
